--- a/Readify (Remake)/Domain/FocusReading/FocusReading.storyboard
+++ b/Readify (Remake)/Domain/FocusReading/FocusReading.storyboard
@@ -185,9 +185,8 @@
                                             <constraint firstAttribute="height" constant="50" id="U4s-qo-Wx3"/>
                                         </constraints>
                                     </stackView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s27-ly-DJi">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s27-ly-DJi" customClass="HalfCircularProgressView" customModule="Readify__Remake_" customModuleProvider="target">
                                         <rect key="frame" x="39" y="20" width="275" height="275"/>
-                                        <color key="backgroundColor" red="1" green="0.58997773836007816" blue="0.91389400583639624" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="275" id="4Cj-QK-1YL"/>
                                             <constraint firstAttribute="height" constant="275" id="zJB-tT-Cxo"/>
@@ -330,7 +329,7 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Reading" translatesAutoresizingMaskIntoConstraints="NO" id="7mh-GU-IKx">
                                         <rect key="frame" x="20" y="32" width="313" height="252"/>
                                     </imageView>
-                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2kq-Jy-1vj">
+                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2kq-Jy-1vj">
                                         <rect key="frame" x="20" y="308" width="313" height="4"/>
                                     </progressView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TIME LEFT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMA-ht-pWe">
@@ -371,6 +370,9 @@
                                                 <buttonConfiguration key="configuration" style="tinted" image="xmark.circle" catalog="system" title="Cancel" imagePadding="4">
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="didCancelButtonTapped:" destination="13k-vs-0wE" eventType="touchUpInside" id="knX-dK-veG"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uun-wK-d71">
                                                 <rect key="frame" x="160.66666666666663" y="0.0" width="152.33333333333337" height="50"/>
@@ -379,6 +381,7 @@
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
                                                 </buttonConfiguration>
                                                 <connections>
+                                                    <action selector="didPlayButtonTapped:" destination="13k-vs-0wE" eventType="touchUpInside" id="XeN-4F-X6Y"/>
                                                     <segue destination="pvd-gS-x2h" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="nua-73-DcO"/>
                                                 </connections>
                                             </button>
@@ -410,6 +413,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AZS-Ua-TBi"/>
+                    <connections>
+                        <outlet property="cancelButton" destination="Xuv-9p-tx9" id="Vze-9N-3gT"/>
+                        <outlet property="playButton" destination="uun-wK-d71" id="QxG-Je-XLr"/>
+                        <outlet property="timerLabel" destination="fXB-iN-J5w" id="qF2-z1-Zv3"/>
+                        <outlet property="timerProgressView" destination="2kq-Jy-1vj" id="LXe-3r-ZNG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9FR-Js-PBL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
