--- a/Readify (Remake)/Domain/FocusReading/FocusReading.storyboard
+++ b/Readify (Remake)/Domain/FocusReading/FocusReading.storyboard
@@ -472,6 +472,12 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                     </textField>
+                                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="‼️ERROR⁉️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06F-uQ-lu1">
+                                                        <rect key="frame" x="-20" y="67.333333333333258" width="353" height="0.0"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" systemColor="systemRedColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <edgeInsets key="layoutMargins" top="0.0" left="-20" bottom="0.0" right="-20"/>
                                             </stackView>
@@ -538,6 +544,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="errorLabel" destination="06F-uQ-lu1" id="79O-7Y-Tpd"/>
                         <outlet property="progressTextField" destination="hJi-zb-4J3" id="t73-gT-2hW"/>
                         <segue destination="ioY-PH-fsV" kind="presentation" modalPresentationStyle="fullScreen" id="Crf-Yu-g4q"/>
                     </connections>
