--- a/Readify (Remake)/Base.lproj/LaunchScreen.storyboard
+++ b/Readify (Remake)/Base.lproj/LaunchScreen.storyboard
@@ -16,27 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZ3-dP-ZX9">
-                                <rect key="frame" x="175.66666666666666" y="415.66666666666669" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="LaunchScreen" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dKd-07-Xyz">
+                                <rect key="frame" x="0.0" y="-9" width="393" height="868"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="UZ3-dP-ZX9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="4bm-mF-UaS"/>
-                            <constraint firstItem="UZ3-dP-ZX9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="chh-B9-i8j"/>
+                            <constraint firstAttribute="trailing" secondItem="dKd-07-Xyz" secondAttribute="trailing" constant="-50" id="fPR-D4-oHv"/>
+                            <constraint firstItem="dKd-07-Xyz" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-50" id="gim-l5-VnV"/>
+                            <constraint firstAttribute="bottom" secondItem="dKd-07-Xyz" secondAttribute="bottom" constant="-50" id="lIe-cd-WOO"/>
+                            <constraint firstItem="dKd-07-Xyz" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="-50" id="vrj-7z-v72"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchScreen" width="390" height="844"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
